Split up notcurses/notcurses-core (#1297)
Extract `libnotcurses-core` from `libnotcurses`. The former contains everything except multimedia code. The latter contains multimedia stuff (a wrapper around FFmpeg or OIIO). If built with `-DUSE_MULTIMEDIA=none`, there will not be any `libnotcurses.so` generated. `libnotcurses.so` uses library constructors/destructors to insert its implementation into the `ncvisual` stack at runtime. Users linking `-lnotcurses` will get the full implementation; users linking `-lnotcurses-core` only will get the stack less multimedia code.

The upshot of this is that someone can compile/install only `libnotcurses-core`, and a program linked against it will work just fine. This eliminates the need to install the full (large) dependency stack of the multimedia code unless necessary. This will hopefully be useful for e.g. installers etc. Closes #339.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,12 @@ if("${USE_COVERAGE}")
   string(APPEND CMAKE_CXX_FLAGS_DEBUG " --coverage -fprofile-instr-generate -fcoverage-mapping")
 endif()
 
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+set(PKGCONFIG_DIR "${CMAKE_INSTALL_LIBDIR}/pkgconfig")
+else()
+set(PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/libdata/pkgconfig")
+endif()
+
 # global compiler flags
 add_compile_definitions(FORTIFY_SOURCE=2)
 add_compile_options(-Wall -Wextra -W -Wshadow -Wformat -fexceptions)
@@ -114,11 +120,97 @@ endif()
 set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND qrcodegen)
 endif()
 find_library(LIBRT rt)
+feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
 
 file(GLOB COMPATSRC CONFIGURE_DEPENDS src/compat/compat.c)
 
-# libnotcurses (core shared library, core static library)
-file(GLOB NCSRCS CONFIGURE_DEPENDS src/lib/*.c src/lib/*.cpp)
+############################################################################
+# libnotcurses-core (core shared library, core static library)
+file(GLOB NCCORESRCS CONFIGURE_DEPENDS src/lib/*.c src/lib/*.cpp)
+add_library(notcurses-core SHARED ${NCCORESRCS} ${COMPATSRC})
+if(${USE_STATIC})
+add_library(notcurses-core-static STATIC ${NCCORESRCS})
+else()
+add_library(notcurses-core-static STATIC EXCLUDE_FROM_ALL ${NCCORESRCS})
+endif()
+set_target_properties(
+  notcurses-core-static PROPERTIES
+  OUTPUT_NAME notcurses-core
+)
+set_target_properties(notcurses-core PROPERTIES
+  VERSION ${PROJECT_VERSION}
+  SOVERSION ${PROJECT_VERSION_MAJOR}
+)
+set_target_properties(notcurses-core-static PROPERTIES
+  VERSION ${PROJECT_VERSION}
+)
+target_include_directories(notcurses-core
+  PRIVATE
+    include
+    src
+    "${PROJECT_BINARY_DIR}/include"
+    "${TERMINFO_INCLUDE_DIRS}"
+    "${READLINE_INCLUDE_DIRS}"
+)
+target_include_directories(notcurses-core-static
+  PRIVATE
+    include
+    src
+    "${PROJECT_BINARY_DIR}/include"
+    "${TERMINFO_STATIC_INCLUDE_DIRS}"
+    "${READLINE_STATIC_INCLUDE_DIRS}"
+)
+target_link_libraries(notcurses-core
+  PRIVATE
+    "${TERMINFO_LIBRARIES}"
+    "${READLINE_LIBRARIES}"
+    "${LIBRT}"
+    unistring
+  PUBLIC
+    Threads::Threads
+)
+target_link_libraries(notcurses-core-static
+  PRIVATE
+    "${TERMINFO_STATIC_LIBRARIES}"
+    "${READLINE_STATIC_LIBRARIES}"
+    "${LIBRT}"
+    unistring
+  PUBLIC
+    Threads::Threads
+)
+target_link_directories(notcurses-core
+  PRIVATE
+    "${TERMINFO_LIBRARY_DIRS}"
+    "${READLINE_LIBRARY_DIRS}"
+)
+target_link_directories(notcurses-core-static
+  PRIVATE
+    "${TERMINFO_STATIC_LIBRARY_DIRS}"
+    "${READLINE_STATIC_LIBRARY_DIRS}"
+)
+# don't want these on freebsd/dragonfly/osx
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+target_compile_definitions(notcurses-core
+  PUBLIC
+   _XOPEN_SOURCE=700 # wcwidth(3) requires _XOPEN_SOURCE, and is in our headers
+  PRIVATE
+   _GNU_SOURCE _DEFAULT_SOURCE
+)
+target_compile_definitions(notcurses-core-static
+  PUBLIC
+   _XOPEN_SOURCE=700 # wcwidth(3) requires _XOPEN_SOURCE, and is in our headers
+  PRIVATE
+   _GNU_SOURCE _DEFAULT_SOURCE
+)
+endif()
+if(${USE_QRCODEGEN})
+target_link_libraries(notcurses-core PRIVATE qrcodegen)
+target_link_libraries(notcurses-core-static PRIVATE qrcodegen)
+endif()
+
+############################################################################
+# libnotcurses (multimedia shared library+static library)
+file(GLOB NCSRCS CONFIGURE_DEPENDS src/media/*.c src/media/*.cpp)
 add_library(notcurses SHARED ${NCSRCS} ${COMPATSRC})
 if(${USE_STATIC})
 add_library(notcurses-static STATIC ${NCSRCS})
@@ -129,76 +221,38 @@ set_target_properties(
   notcurses-static PROPERTIES
   OUTPUT_NAME notcurses
 )
-
-feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
-
-set_target_properties(notcurses PROPERTIES
-  VERSION ${PROJECT_VERSION}
-  SOVERSION ${PROJECT_VERSION_MAJOR}
-)
-set_target_properties(notcurses-static PROPERTIES
-  VERSION ${PROJECT_VERSION}
-)
 target_include_directories(notcurses
   PRIVATE
     include
     src
+    src/lib
     "${PROJECT_BINARY_DIR}/include"
-    "${TERMINFO_INCLUDE_DIRS}"
-    "${READLINE_INCLUDE_DIRS}"
 )
 target_include_directories(notcurses-static
   PRIVATE
     include
     src
+    src/lib
     "${PROJECT_BINARY_DIR}/include"
-    "${TERMINFO_STATIC_INCLUDE_DIRS}"
-    "${READLINE_STATIC_INCLUDE_DIRS}"
 )
 target_link_libraries(notcurses
-  PRIVATE
-    "${TERMINFO_LIBRARIES}"
-    "${READLINE_LIBRARIES}"
-    "${LIBRT}"
-    unistring
   PUBLIC
-    Threads::Threads
+    notcurses-core
 )
 target_link_libraries(notcurses-static
-  PRIVATE
-    "${TERMINFO_STATIC_LIBRARIES}"
-    "${READLINE_STATIC_LIBRARIES}"
-    "${LIBRT}"
-    unistring
   PUBLIC
-    Threads::Threads
+    notcurses-core-static
 )
-target_link_directories(notcurses
-  PRIVATE
-    "${TERMINFO_LIBRARY_DIRS}"
-    "${READLINE_LIBRARY_DIRS}"
-)
-target_link_directories(notcurses-static
-  PRIVATE
-    "${TERMINFO_STATIC_LIBRARY_DIRS}"
-    "${READLINE_STATIC_LIBRARY_DIRS}"
-)
-
-if(${USE_QRCODEGEN})
-target_link_libraries(notcurses PRIVATE qrcodegen)
-target_link_libraries(notcurses-static PRIVATE qrcodegen)
-endif()
-
 if(${USE_FFMPEG})
 target_include_directories(notcurses
-  PUBLIC
+  PRIVATE
     "${AVCODEC_INCLUDE_DIRS}"
     "${AVFORMAT_INCLUDE_DIRS}"
     "${AVUTIL_INCLUDE_DIRS}"
     "${SWSCALE_INCLUDE_DIRS}"
 )
 target_include_directories(notcurses-static
-  PUBLIC
+  PRIVATE
     "${AVCODEC_STATIC_INCLUDE_DIRS}"
     "${AVFORMAT_STATIC_INCLUDE_DIRS}"
     "${AVUTIL_STATIC_INCLUDE_DIRS}"
@@ -209,7 +263,6 @@ target_link_libraries(notcurses
     "${AVCODEC_LIBRARIES}"
     "${AVFORMAT_LIBRARIES}"
     "${SWSCALE_LIBRARIES}"
-  PUBLIC
     "${AVUTIL_LIBRARIES}"
 )
 target_link_libraries(notcurses-static
@@ -217,7 +270,6 @@ target_link_libraries(notcurses-static
     "${AVCODEC_STATIC_LIBRARIES}"
     "${AVFORMAT_STATIC_LIBRARIES}"
     "${SWSCALE_STATIC_LIBRARIES}"
-  PUBLIC
     "${AVUTIL_STATIC_LIBRARIES}"
 )
 target_link_directories(notcurses
@@ -225,7 +277,6 @@ target_link_directories(notcurses
     "${AVCODEC_LIBRARY_DIRS}"
     "${AVFORMAT_LIBRARY_DIRS}"
     "${SWSCALE_LIBRARY_DIRS}"
-  PUBLIC
     "${AVUTIL_LIBRARY_DIRS}"
 )
 target_link_directories(notcurses-static
@@ -233,7 +284,6 @@ target_link_directories(notcurses-static
     "${AVCODEC_STATIC_LIBRARY_DIRS}"
     "${AVFORMAT_STATIC_LIBRARY_DIRS}"
     "${SWSCALE_STATIC_LIBRARY_DIRS}"
-  PUBLIC
     "${AVUTIL_STATIC_LIBRARY_DIRS}"
 )
 elseif(${USE_OIIO})
@@ -245,28 +295,8 @@ target_link_directories(notcurses PRIVATE ${OIIO_LIBRARY_DIRS})
 target_link_directories(notcurses-static PRIVATE ${OIIO_STATIC_LIBRARY_DIRS})
 endif()
 
-# don't want these on freebsd
-if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-target_compile_definitions(notcurses
-  PUBLIC
-   _XOPEN_SOURCE=700 # wcwidth(3) requires _XOPEN_SOURCE, and is in our headers
-  PRIVATE
-   _GNU_SOURCE _DEFAULT_SOURCE
-)
-target_compile_definitions(notcurses-static
-  PUBLIC
-   _XOPEN_SOURCE=700 # wcwidth(3) requires _XOPEN_SOURCE, and is in our headers
-  PRIVATE
-   _GNU_SOURCE _DEFAULT_SOURCE
-)
-set(PKGCONFIG_DIR "${CMAKE_INSTALL_LIBDIR}/pkgconfig")
-elseif(${CMAKE_SYSTEM_NAME} STREQUAL "FreeBSD")
-set(PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/libdata/pkgconfig")
-elseif(${CMAKE_SYSTEM_NAME} STREQUAL "DragonFly")
-set(PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/libdata/pkgconfig")
-endif()
-
-# libnotcurses++
+############################################################################
+# libnotcurses++ (C++ wrappers)
 set(NCPP_SOURCES
   src/libcpp/FDPlane.cc
   src/libcpp/Menu.cc
@@ -375,31 +405,6 @@ install(FILES ${NOTCURSES_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/notcu
 install(FILES ${NCPP_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/ncpp)
 install(FILES ${NCPP_INTERNAL_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/ncpp/internal)
 
-# notcurses-demo
-file(GLOB DEMOSRCS CONFIGURE_DEPENDS src/demo/*.c)
-add_executable(notcurses-demo ${DEMOSRCS} ${COMPATSRC})
-target_compile_definitions(notcurses-demo
-  PRIVATE
-    _GNU_SOURCE
-)
-target_include_directories(notcurses-demo
-  PRIVATE
-    include
-    src
-    "${PROJECT_BINARY_DIR}/include"
-  PUBLIC
-    "${AVCODEC_INCLUDE_DIRS}"
-    "${AVFORMAT_INCLUDE_DIRS}"
-    "${AVUTIL_INCLUDE_DIRS}"
-    "${SWSCALE_INCLUDE_DIRS}"
-)
-target_link_libraries(notcurses-demo
-  PRIVATE
-    notcurses
-    unistring
-    ${MATH_LIBRARIES}
-)
-
 # tiny proofs of concept, one binary per source file
 if(USE_POC)
 file(GLOB POCSRCS CONFIGURE_DEPENDS src/poc/*.c src/poc/*.cpp)
@@ -496,19 +501,35 @@ if(USE_DOXYGEN)
   endif()
 endif()
 
-# ncneofetch
-file(GLOB FETCHSRCS CONFIGURE_DEPENDS src/fetch/*.c)
-add_executable(ncneofetch ${FETCHSRCS})
-target_include_directories(ncneofetch
+############################################################################
+# notcurses-demo
+file(GLOB DEMOSRCS CONFIGURE_DEPENDS src/demo/*.c)
+add_executable(notcurses-demo ${DEMOSRCS} ${COMPATSRC})
+target_compile_definitions(notcurses-demo
+  PRIVATE
+    _GNU_SOURCE
+)
+target_include_directories(notcurses-demo
   PRIVATE
     include
+    src
     "${PROJECT_BINARY_DIR}/include"
+  PUBLIC
+    "${AVCODEC_INCLUDE_DIRS}"
+    "${AVFORMAT_INCLUDE_DIRS}"
+    "${AVUTIL_INCLUDE_DIRS}"
+    "${SWSCALE_INCLUDE_DIRS}"
 )
-target_link_libraries(ncneofetch
+target_link_libraries(notcurses-demo
   PRIVATE
     notcurses
+    unistring
+    ${MATH_LIBRARIES}
+  PUBLIC
+    Threads::Threads
 )
 
+############################################################################
 # notcurses-input
 file(GLOB INPUTSRCS CONFIGURE_DEPENDS src/input/input.cpp)
 add_executable(notcurses-input ${INPUTSRCS})
@@ -522,19 +543,7 @@ target_link_libraries(notcurses-input
     notcurses++
 )
 
-# ncls
-file(GLOB LSSRC CONFIGURE_DEPENDS src/ls/*.cpp)
-add_executable(ncls ${LSSRC})
-target_include_directories(ncls
-  PRIVATE
-    include
-    "${PROJECT_BINARY_DIR}/include"
-)
-target_link_libraries(ncls
-  PRIVATE
-    notcurses++
-)
-
+############################################################################
 # notcurses-tetris
 file(GLOB TETRISSRC CONFIGURE_DEPENDS src/tetris/*.cpp)
 add_executable(notcurses-tetris ${TETRISSRC})
@@ -548,8 +557,39 @@ target_link_libraries(notcurses-tetris
     notcurses++
 )
 
+# all further binaries require multimedia support
+if(NOT ${USE_MULTIMEDIA} STREQUAL "none")
+############################################################################
+# ncneofetch
+file(GLOB FETCHSRCS CONFIGURE_DEPENDS src/fetch/*.c)
+add_executable(ncneofetch ${FETCHSRCS})
+target_include_directories(ncneofetch
+  PRIVATE
+    include
+    "${PROJECT_BINARY_DIR}/include"
+)
+target_link_libraries(ncneofetch
+  PRIVATE
+    notcurses
+)
+
+############################################################################
+# ncls
+file(GLOB LSSRC CONFIGURE_DEPENDS src/ls/*.cpp)
+add_executable(ncls ${LSSRC})
+target_include_directories(ncls
+  PRIVATE
+    include
+    "${PROJECT_BINARY_DIR}/include"
+)
+target_link_libraries(ncls
+  PRIVATE
+    notcurses++
+)
+
+############################################################################
 # notcurses-view
-if(${USE_FFMPEG} OR ${USE_OIIO})
+if(NOT ${USE_MULTIMEDIA} STREQUAL "none")
 file(GLOB VIEWSRCS CONFIGURE_DEPENDS src/view/*.cpp)
 add_executable(notcurses-view ${VIEWSRCS} ${COMPATSRC})
 target_include_directories(notcurses-view
@@ -563,8 +603,10 @@ target_link_libraries(notcurses-view
     notcurses++
 )
 endif()
+endif()
 
-# Testing
+############################################################################
+# testing
 if(${BUILD_TESTING})
 #set(CMAKE_CTEST_ARGUMENTS "-V")
 if(${USE_DOCTEST})
@@ -579,8 +621,8 @@ target_include_directories(notcurses-tester
 )
 target_link_libraries(notcurses-tester
   PRIVATE
-    unistring
     notcurses++
+    unistring
     "${TERMINFO_LIBRARIES}"
 )
 add_test(
@@ -629,11 +671,14 @@ add_custom_target(demo
 )
 
 # pkg-config support
+configure_file(tools/notcurses-core.pc.in
+  ${CMAKE_CURRENT_BINARY_DIR}/notcurses-core.pc
+  @ONLY
+)
 configure_file(tools/notcurses.pc.in
   ${CMAKE_CURRENT_BINARY_DIR}/notcurses.pc
   @ONLY
 )
-
 configure_file(tools/notcurses++.pc.in
   ${CMAKE_CURRENT_BINARY_DIR}/notcurses++.pc
   @ONLY
@@ -686,7 +731,7 @@ install(FILES
   DESTINATION ${PKGCONFIG_DIR}
   )
 
-if(${USE_FFMPEG} OR ${USE_OIIO})
+if(NOT ${USE_MULTIMEDIA} STREQUAL "none")
 file(GLOB TESTDATA CONFIGURE_DEPENDS data/*)
 # Don't install source materia for self-originated multimedia
 list(FILTER TESTDATA EXCLUDE REGEX ".*xcf$")
@@ -701,14 +746,14 @@ install(FILES ${MARKDOWN} DESTINATION ${CMAKE_INSTALL_DOCDIR})
 
 install(TARGETS notcurses-demo DESTINATION bin)
 install(TARGETS notcurses-input DESTINATION bin)
-install(TARGETS ncls DESTINATION bin)
-install(TARGETS ncneofetch DESTINATION bin)
 install(TARGETS notcurses-tetris DESTINATION bin)
-if(${USE_FFMPEG} OR ${USE_OIIO})
+if(NOT ${USE_MULTIMEDIA} STREQUAL "none")
+install(TARGETS ncneofetch DESTINATION bin)
+install(TARGETS ncls DESTINATION bin)
 install(TARGETS notcurses-view DESTINATION bin)
 endif()
 
-install(TARGETS notcurses notcurses++
+install(TARGETS notcurses-core notcurses notcurses++
   LIBRARY
     DESTINATION ${CMAKE_INSTALL_LIBDIR}
     COMPONENT Libraries
@@ -716,7 +761,7 @@ install(TARGETS notcurses notcurses++
 )
 if(${USE_STATIC})
 install(
-  TARGETS notcurses-static notcurses++-static
+  TARGETS notcurses-core-static notcurses-static notcurses++-static
   LIBRARY
     DESTINATION ${CMAKE_INSTALL_LIBDIR}
     COMPONENT Libraries
