set CMAKE_LINK_WHAT_YOU_USE to ON #1300

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_VISIBILITY_PRESET hidden)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+# Passes -Wl,-no-as-needed to linker steps, necessary to reliably link
+# libnotcurses.so into executables...for now. This is grotesque. FIXME
+set(CMAKE_LINK_WHAT_YOU_USE ON)
 
 include(CTest)
 include(GNUInstallDirs)
@@ -582,15 +585,15 @@ target_include_directories(ncls
     include
     "${PROJECT_BINARY_DIR}/include"
 )
-target_link_libraries(ncls
+tarGET_Link_libraries(ncls
   PRIVATE
-    notcurses++
+    notcurses
 )
 
 ############################################################################
 # ncplayer
-file(GLOB VIEWSRCS CONFIGURE_DEPENDS src/view/*.cpp)
-add_executable(ncplayer ${VIEWSRCS} ${COMPATSRC})
+file(GLOB PLAYERSRCS CONFIGURE_DEPENDS src/player/*.cpp)
+add_executable(ncplayer ${PLAYERSRCS} ${COMPATSRC})
 target_include_directories(ncplayer
   PRIVATE
     include
