--- a/tools/NotcursesConfig.cmake.in
+++ b/tools/NotcursesConfig.cmake.in
@@ -6,4 +6,4 @@ get_filename_component(Notcurses_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 set(Notcurses_INCLUDE_DIRS "@CONF_INCLUDE_DIRS@")
 set(Notcurses_LIBRARY_DIRS "@CONF_LIBRARY_DIRS@")
 
-set(Notcurses_LIBRARIES -lnotcurses)
+set(Notcurses_LIBRARIES -lnotcurses-core -lnotcurses)
