use Requires.private for static linking in pkg-config #1306

--- a/tools/notcurses-core.pc.in
+++ b/tools/notcurses-core.pc.in
@@ -8,5 +8,7 @@ Description: TUI library for modern terminal emulators
 Version: @PROJECT_VERSION@
 
 Requires:
+Requires.private: pthread tinfo unistring
 Libs: -L${libdir} -lnotcurses-core
+Libs.private: -lm
 Cflags: -I${includedir}
