--- a/tools/notcurses-core.pc.in
+++ b/tools/notcurses-core.pc.in
@@ -10,5 +10,5 @@ Version: @PROJECT_VERSION@
 Requires:
 Requires.private: pthread tinfo unistring
 Libs: -L${libdir} -lnotcurses-core
-Libs.private: -lm
+Libs.private: -lm -lstdc++
 Cflags: -I${includedir}
