CMakeLists.txt: switch from O0 to Og

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,8 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
   set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE
     STRING "Choose the build mode." FORCE)
 endif()
-string(APPEND CMAKE_C_FLAGS_DEBUG " -O0")
-string(APPEND CMAKE_CXX_FLAGS_DEBUG " -O0")
+string(APPEND CMAKE_C_FLAGS_DEBUG " -Og")
+string(APPEND CMAKE_CXX_FLAGS_DEBUG " -Og")
 if("${USE_COVERAGE}")
   if(NOT "${CMAKE_C_COMPILER_ID}" MATCHES "(Apple)?[Cc]lang")
     message(FATAL_ERROR "USE_COVERAGE was on but CC isn't clang")
@@ -622,7 +622,7 @@ endif()
 ############################################################################
 # testing
 if(${BUILD_TESTING})
-#set(CMAKE_CTEST_ARGUMENTS "-V")
+set(CMAKE_CTEST_ARGUMENTS "-V")
 if(${USE_DOCTEST})
 file(GLOB TESTSRCS CONFIGURE_DEPENDS src/tests/*.cpp)
 add_executable(notcurses-tester ${TESTSRCS})
