rename notcurses-direct-pydemo ncdirect-pydemo

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,7 +19,7 @@ steps:
     - cd ../cffi
     - LDFLAGS=-L/usr/local/lib CFLAGS=-I/usr/local/include python3 setup.py sdist build install
     - env LD_LIBRARY_PATH=/usr/local/lib ./notcurses-pydemo > /dev/null
-    - env LD_LIBRARY_PATH=/usr/local/lib ./notcurses-direct-pydemo > /dev/null
+    - env LD_LIBRARY_PATH=/usr/local/lib ./ncdirect-pydemo > /dev/null
     - cd ../rust
     - rustc --version
     - cargo build
@@ -64,7 +64,7 @@ steps:
     - cargo t_all
     - LDFLAGS=-L/usr/local/lib CFLAGS=-I/usr/local/include python3 setup.py sdist build install
     - env LD_LIBRARY_PATH=/usr/local/lib ./notcurses-pydemo > /dev/null
-    - env LD_LIBRARY_PATH=/usr/local/lib ./notcurses-direct-pydemo > /dev/null
+    - env LD_LIBRARY_PATH=/usr/local/lib ./ncdirect-pydemo > /dev/null
 ---
 kind: pipeline
 type: docker
